[FEAT] 사용 추이 redis 추가