@@ -9,10 +9,13 @@ import com.beyond.qiin.domain.accounting.dto.usage_history.response.UsageHistory
 import com.beyond.qiin.domain.accounting.dto.usage_history.response.raw.UsageHistoryTrendRawDto;
 import com.beyond.qiin.domain.accounting.dto.usage_history.response.raw.UsageHistoryTrendRawDto.UsageAggregate;
 import com.beyond.qiin.domain.accounting.repository.querydsl.UsageHistoryTrendQueryAdapter;
+
 import com.beyond.qiin.infra.redis.accounting.usage_history.UsageTrendRedisAdapter;
+
 import java.time.LocalDate;
 import java.util.*;
 import java.util.stream.IntStream;
+
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -32,105 +35,122 @@ public class UsageHistoryTrendQueryServiceImpl implements UsageHistoryTrendQuery
         int baseYear = request.getBaseYear() != null ? request.getBaseYear() : currentYear - 1;
         int compareYear = request.getCompareYear() != null ? request.getCompareYear() : currentYear;
 
-        Long assetId = request.getAssetId();
+        // QueryAdapter에서 필터링을 처리하므로 여기 값은 그대로 넘김
         String assetName = request.getAssetName();
 
-        UsageHistoryTrendRawDto raw = trendQueryAdapter.getTrendData(baseYear, compareYear, assetId, assetName, 0);
+        // DB raw 조회
+        UsageHistoryTrendRawDto raw =
+                trendQueryAdapter.getTrendData(baseYear, compareYear, null, assetName, 0);
 
-        Map<Integer, UsageAggregate> baseRaw = Optional.ofNullable(raw)
-                .map(UsageHistoryTrendRawDto::getBaseYearData)
-                .orElse(Collections.emptyMap());
+        Long resolvedAssetId = raw.getAssetId();  // ⭐ 캐싱용으로 반드시 이것을 사용해야 함
 
-        Map<Integer, UsageAggregate> compareRaw = Optional.ofNullable(raw)
-                .map(UsageHistoryTrendRawDto::getCompareYearData)
-                .orElse(Collections.emptyMap());
+        Map<Integer, UsageAggregate> baseRaw =
+                Optional.ofNullable(raw).map(UsageHistoryTrendRawDto::getBaseYearData).orElse(Map.of());
 
-        // 중복 제거한 공통 메서드 사용
-        Map<Integer, UsageAggregate> baseData =
-                loadYearlyDataWithCache(baseYear, currentYear, currentMonth, assetId, assetName, baseRaw);
+        Map<Integer, UsageAggregate> compareRaw =
+                Optional.ofNullable(raw).map(UsageHistoryTrendRawDto::getCompareYearData).orElse(Map.of());
 
-        Map<Integer, UsageAggregate> compareData =
-                loadYearlyDataWithCache(compareYear, currentYear, currentMonth, assetId, assetName, compareRaw);
+        // 월별 사용률 계산 + 캐싱 적용
+        Map<Integer, Double> baseRateMap =
+                loadYearlyUsageRateWithCache(baseYear, currentYear, currentMonth, resolvedAssetId, baseRaw);
 
-        List<MonthlyUsageData> monthlyList = buildMonthlyList(baseData, compareData);
+        Map<Integer, Double> compareRateMap =
+                loadYearlyUsageRateWithCache(compareYear, currentYear, currentMonth, resolvedAssetId, compareRaw);
 
-        int assetCount = Optional.ofNullable(raw)
-                .map(UsageHistoryTrendRawDto::getAssetCount)
-                .orElse(0);
+        // UI 표시용 리스트
+        List<MonthlyUsageData> monthlyList = buildMonthlyList(baseRateMap, compareRateMap);
 
-        UsageIncreaseSummary summary = calculateIncrease(baseData, compareData, assetCount, currentMonth);
+        int assetCount = Optional.ofNullable(raw).map(UsageHistoryTrendRawDto::getAssetCount).orElse(0);
 
-        Long finalAssetId = Optional.ofNullable(raw)
-                .map(UsageHistoryTrendRawDto::getAssetId)
-                .orElse(null);
-
-        String finalAssetName = Optional.ofNullable(raw)
-                .map(UsageHistoryTrendRawDto::getAssetName)
-                .orElse(null);
+        // Summary 계산은 raw 데이터 기반 (캐싱 영향 없음)
+        UsageIncreaseSummary summary =
+                calculateIncrease(baseRaw, compareRaw, assetCount, currentMonth);
 
         return UsageHistoryTrendResponseDto.builder()
-                .asset(new AssetInfo(finalAssetId, finalAssetName))
+                .asset(new AssetInfo(
+                        raw.getAssetId(),
+                        raw.getAssetName()
+                ))
                 .yearRange(new YearRangeInfo(baseYear, compareYear, 12))
                 .monthlyData(monthlyList)
                 .summary(summary)
                 .build();
     }
 
-    // 월별 캐싱 처리 (baseYear, compareYear 공통 처리)
-    private Map<Integer, UsageAggregate> loadYearlyDataWithCache(
+    // -------------------------------------------------------------------------
+    // 월별 사용률 캐싱 처리 — 검색한 자원 ID 기준으로 캐싱됨
+    // -------------------------------------------------------------------------
+    private Map<Integer, Double> loadYearlyUsageRateWithCache(
             int targetYear,
             int currentYear,
             int currentMonth,
-            Long assetId,
-            String assetName,
-            Map<Integer, UsageAggregate> rawData) {
-        Map<Integer, UsageAggregate> result = new HashMap<>();
+            Long resolvedAssetId,
+            Map<Integer, UsageAggregate> rawData
+    ) {
+        Map<Integer, Double> rateMap = new HashMap<>();
 
         for (int month = 1; month <= 12; month++) {
 
             boolean isCurrentMonth = (targetYear == currentYear && month == currentMonth);
-            String key = buildCacheKey(targetYear, month, assetId, assetName);
+            boolean isPastYear = targetYear < currentYear;
+            boolean isPastMonthOfThisYear = (targetYear == currentYear && month < currentMonth);
 
+            String key = buildCacheKey(targetYear, month, resolvedAssetId);
+
+            // 캐시 조회 (단, 현재월 제외)
             if (!isCurrentMonth) {
-                Object cached = redisAdapter.get(key);
-                if (cached instanceof UsageAggregate agg) {
-                    result.put(month, agg);
+                Double cached = redisAdapter.get(key);
+                if (cached != null) {
+                    rateMap.put(month, cached);
                     continue;
                 }
             }
 
+            // raw 기반 계산
             UsageAggregate agg = rawData.getOrDefault(month, empty());
-            result.put(month, agg);
+            double rate = calcUsageRate(agg);
+            rateMap.put(month, rate);
 
-            if (!isCurrentMonth) {
-                redisAdapter.save(key, agg, 0);
+            // 캐시 저장 규칙
+            if (isPastYear) {
+                redisAdapter.save(key, rate, null);     // 영구 캐싱
+            } else if (isPastMonthOfThisYear) {
+                redisAdapter.save(key, rate, 1L);       // 1시간 캐싱
             }
         }
 
-        return result;
+        return rateMap;
     }
 
-    // UI 렌더링용 데이터 변환
+    // -------------------------------------------------------------------------
+    // UI 렌더링용 리스트 생성
+    // -------------------------------------------------------------------------
     private List<MonthlyUsageData> buildMonthlyList(
-            Map<Integer, UsageAggregate> baseData, Map<Integer, UsageAggregate> compareData) {
+            Map<Integer, Double> baseRate,
+            Map<Integer, Double> compareRate
+    ) {
         List<MonthlyUsageData> result = new ArrayList<>();
 
         for (int m = 1; m <= 12; m++) {
-            UsageAggregate b = baseData.getOrDefault(m, empty());
-            UsageAggregate c = compareData.getOrDefault(m, empty());
-
             result.add(MonthlyUsageData.builder()
                     .month(m)
-                    .baseYearUsageRate(round1(calcUsageRate(b)))
-                    .compareYearUsageRate(round1(calcUsageRate(c)))
+                    .baseYearUsageRate(round1(baseRate.getOrDefault(m, 0.0)))
+                    .compareYearUsageRate(round1(compareRate.getOrDefault(m, 0.0)))
                     .build());
         }
+
         return result;
     }
 
-    // summary 계산
+    // -------------------------------------------------------------------------
+    // Summary 계산 (raw 데이터 기반)
+    // -------------------------------------------------------------------------
     private UsageIncreaseSummary calculateIncrease(
-            Map<Integer, UsageAggregate> base, Map<Integer, UsageAggregate> compare, int assetCount, int currentMonth) {
+            Map<Integer, UsageAggregate> base,
+            Map<Integer, UsageAggregate> compare,
+            int assetCount,
+            int currentMonth
+    ) {
 
         List<Integer> validMonths = IntStream.rangeClosed(1, 12)
                 .filter(m -> m < currentMonth)
@@ -148,30 +168,19 @@ public class UsageHistoryTrendQueryServiceImpl implements UsageHistoryTrendQuery
         }
 
         int baseActual = validMonths.stream()
-                .mapToInt(m -> base.getOrDefault(m, empty()).getActualUsage())
-                .sum();
+                .mapToInt(m -> base.getOrDefault(m, empty()).getActualUsage()).sum();
 
         int compareActual = validMonths.stream()
-                .mapToInt(m -> compare.getOrDefault(m, empty()).getActualUsage())
-                .sum();
+                .mapToInt(m -> compare.getOrDefault(m, empty()).getActualUsage()).sum();
 
         int baseReserved = validMonths.stream()
-                .mapToInt(m -> base.getOrDefault(m, empty()).getReservedUsage())
-                .sum();
+                .mapToInt(m -> base.getOrDefault(m, empty()).getReservedUsage()).sum();
 
         int compareReserved = validMonths.stream()
-                .mapToInt(m -> compare.getOrDefault(m, empty()).getReservedUsage())
-                .sum();
+                .mapToInt(m -> compare.getOrDefault(m, empty()).getReservedUsage()).sum();
 
-        if (baseReserved == 0 || compareReserved == 0) {
-            return UsageIncreaseSummary.builder()
-                    .usageRateIncrease(0.0)
-                    .actualUsageIncrease(0.0)
-                    .resourceUtilizationIncrease(0.0)
-                    .build();
-        }
-
-        double usageRateIncrease = ((double) (compareReserved - baseReserved) / baseReserved) * 100.0;
+        double usageRateIncrease =
+                ((double) (compareReserved - baseReserved) / baseReserved) * 100.0;
 
         double baseRatio = (double) baseActual / baseReserved;
         double compareRatio = (double) compareActual / compareReserved;
@@ -204,17 +213,16 @@ public class UsageHistoryTrendQueryServiceImpl implements UsageHistoryTrendQuery
         return Math.round(value * 10.0) / 10.0;
     }
 
-    private String buildCacheKey(int year, int month, Long assetId, String assetName) {
-        String assetKey;
+    /**
+     * 캐시 키 = year:month:assetId|null(전체)
+     */
+    private String buildCacheKey(int year, int month, Long assetId) {
 
-        if (assetId != null) {
-            assetKey = "id-" + assetId;
-        } else if (assetName != null && !assetName.isBlank()) {
-            assetKey = "name-" + assetName.toLowerCase();
-        } else {
-            assetKey = "all";
-        }
+        String assetKey = (assetId != null)
+                ? "id-" + assetId
+                : "all";
 
         return String.format("usageTrend:%d:%d:%s", year, month, assetKey);
     }
+
 }
